Bug 284673 - Regression: Forwarded messages are not marked as such in the message list
Summary: Regression: Forwarded messages are not marked as such in the message list
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-22 08:18 UTC by Gunter Ohrner
Modified: 2011-10-23 20:18 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2011-10-22 08:18:49 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

Forwarded messages are not marked as such in the message list
 (traditional layout, one row per message)

Reproducible: Always

Steps to Reproduce:
Forward a message, eg. "Forward as attachment"

Actual Results:  
The message is not flagged / marked in any way.

Expected Results:  
kMail up to KDE 4.6 would show a "forwarded" icon next to the message's subject line in the message list.
Comment 1 Laurent Montel 2011-10-23 15:03:56 UTC
I can confirm it.
Will look at it.
Comment 2 Laurent Montel 2011-10-23 16:24:43 UTC
Git commit 2bbe3fe60ce0f60c7317fd12a8addcdb6b83c6ea by Montel Laurent.
Committed on 23/10/2011 at 18:23.
Pushed by mlaurent into branch 'master'.

Start to fix Bug 284673 - Regression: Forwarded messages are not marked as such in the message list  not perfect yet.

CCBUG: 284673

M  +12   -11   kmail/kmcommands.cpp

http://commits.kde.org/kdepim/2bbe3fe60ce0f60c7317fd12a8addcdb6b83c6ea
Comment 3 Laurent Montel 2011-10-23 16:25:22 UTC
Git commit c50cb7417cf2c579f98016992fb0e4be025d533e by Montel Laurent.
Committed on 23/10/2011 at 18:23.
Pushed by mlaurent into branch 'KDE/4.7'.

Start to fix Bug 284673 - Regression: Forwarded messages are not marked as such in the message list  not perfect yet.

CCBUG: 284673
(cherry picked from commit 2bbe3fe60ce0f60c7317fd12a8addcdb6b83c6ea)

M  +12   -11   kmail/kmcommands.cpp

http://commits.kde.org/kdepim/c50cb7417cf2c579f98016992fb0e4be025d533e
Comment 4 Laurent Montel 2011-10-23 18:01:36 UTC
Git commit ade161cee53ec9094892676cba186945ec27f909 by Montel Laurent.
Committed on 23/10/2011 at 20:01.
Pushed by mlaurent into branch 'master'.

Continue to fix "Bug 284673 - Regression: Forwarded messages are not marked as such in the message list"

CCBUG: 284673

M  +2    -7    kmail/kmcommands.cpp
M  +6    -6    messagecomposer/composerviewbase.cpp
M  +42   -31   messagecomposer/messagefactory.cpp
M  +2    -1    messagecomposer/messagefactory.h
M  +13   -11   messagecore/messagehelpers.cpp
M  +1    -2    messagecore/messagehelpers.h
M  +1    -1    mobile/mail/mainview.cpp

http://commits.kde.org/kdepim/ade161cee53ec9094892676cba186945ec27f909
Comment 5 Laurent Montel 2011-10-23 18:02:46 UTC
Git commit a5cfa671354b5bb027de1461891e017cb6caab77 by Montel Laurent.
Committed on 23/10/2011 at 20:01.
Pushed by mlaurent into branch 'KDE/4.7'.

Continue to fix "Bug 284673 - Regression: Forwarded messages are not marked as such in the message list"

CCBUG: 284673
(cherry picked from commit ade161cee53ec9094892676cba186945ec27f909)

M  +2    -7    kmail/kmcommands.cpp
M  +6    -6    messagecomposer/composerviewbase.cpp
M  +42   -31   messagecomposer/messagefactory.cpp
M  +2    -1    messagecomposer/messagefactory.h
M  +13   -11   messagecore/messagehelpers.cpp
M  +1    -2    messagecore/messagehelpers.h
M  +1    -1    mobile/mail/mainview.cpp

http://commits.kde.org/kdepim/a5cfa671354b5bb027de1461891e017cb6caab77
Comment 6 Laurent Montel 2011-10-23 20:18:02 UTC
Git commit 6ca1145823f31bc78b8fc12d2462e518790d3071 by Montel Laurent.
Committed on 23/10/2011 at 22:17.
Pushed by mlaurent into branch 'master'.

Fix Bug 284673 - Regression: Forwarded messages are not marked as such in the message list

FIXED-IN: 4.7.3
BUG: 284673

M  +8    -8    messagecomposer/composerviewbase.cpp

http://commits.kde.org/kdepim/6ca1145823f31bc78b8fc12d2462e518790d3071
Comment 7 Laurent Montel 2011-10-23 20:18:39 UTC
Git commit dbc6c68873180e311229f3d0c2f0921958953ea6 by Montel Laurent.
Committed on 23/10/2011 at 22:17.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 284673 - Regression: Forwarded messages are not marked as such in the message list

FIXED-IN: 4.7.3
BUG: 284673
(cherry picked from commit 6ca1145823f31bc78b8fc12d2462e518790d3071)

M  +8    -8    messagecomposer/composerviewbase.cpp

http://commits.kde.org/kdepim/dbc6c68873180e311229f3d0c2f0921958953ea6