Fix Bug 284673 - Regression: Forwarded messages are not marked as such in the message list

FIXED-IN: 4.7.3
BUG: 284673
(cherry picked from commit 6ca1145823f31bc78b8fc12d2462e518790d3071)